--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<input type="button" name="reset" value="Reset" id="reset" onclick="test_universe.reset()">
 	<script>
 	var test_universe = new Universe({
-		gravity: -10,
+		gravity: -100,
 		scale: 10,
 		space: document.getElementById('space'),
 		vacuum: false
@@ -24,13 +24,17 @@
 	
 	var new_object = new UniverseObject({
 		type: 'circle',
+		width: 30,
+		height: 30,
 		position: {x: 10, y: 40, z: 0},
-		acceleration: {x: 5, y: 5, z: 0},
+		velocity: {x: 5, y: 50, z: 0},
 		universe: test_universe
 	});
 	
 	var circle = new UniverseObject({
 		element: document.getElementById('circle-existing'),
+		width: 30,
+		height: 30,
 		position: {x: 50, y: 40, z: 0},
 		velocity: {x: 0, y: 10, z: 0},
 		universe: test_universe
@@ -38,6 +42,8 @@
 	
 	var square = new UniverseObject({
 		element: document.getElementById('square-existing'),
+		width: 30,
+		height: 30,
 		position: {x: 40, y: 20, z: 0},
 		velocity: {x: -10, y: 5, z: 0},
 		universe: test_universe
